fixed resizing issue with footer & wrap

--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@ body {
 }
 
 .content {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
 }
 
 .bio {
+    flex-grow: 1;
     display: flex;
     height: 540px;
 }
@@ -45,7 +47,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 450px;
+    min-height: 450px;
 
 }
 
@@ -104,6 +106,7 @@ img {
 
 .footer {
     display: flex;
+    flex-shrink: 0;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
